name:                scheme
version:             0.1
synopsis:            Scheme implementation
description:         Scheme implementation
license:             BSD3
-- license-file:        LICENSE
author:              Sergey Vinokurov
maintainer:          Sergey Vinokurov <serg.foo@gmail.com>

cabal-version:       >= 1.16
build-type:          Simple

library
  build-depends:     base, containers, mtl, text, wl-pprint-text, uu-parsinglib,
                     void, template-haskell
  exposed-modules:   MCEval
  other-modules:     ALaCarte
  default-language:  Haskell2010
  ghc-options:       -W -Wall -fwarn-monomorphism-restriction -ferror-spans -rtsopts
  hs-source-dirs:    src

-- executable           scheme-repl
--   build-depends:     scheme
--   main-is:           MCEval.hs
--   default-language:  Haskell2010
--   ghc-options:       -W -Wall -fwarn-monomorphism-restriction -ferror-spans -rtsopts
--   hs-source-dirs:    src
--  other-modules:     Utils.Utils
--  ghc-options:       -main-is MyMain
--  build-tools:       alex happy

test-suite scheme-test
  type:             exitcode-stdio-1.0
  build-depends:    base, containers, mtl, text, wl-pprint-text, uu-parsinglib,
                    void, tasty, tasty-hunit, template-haskell,
                    --, hunit
                    -- test-framework,
                    -- QuickCheck, test-framework-quickcheck
                    scheme
 main-is:           Main.hs
 hs-source-dirs:    test, src
 default-language:  Haskell2010

