name:                scheme
version:             0.1
synopsis:            Scheme implementation
description:         Scheme implementation
license:             BSD3
-- license-file:        LICENSE
author:              Sergey Vinokurov
maintainer:          Sergey Vinokurov <serg.foo@gmail.com>

cabal-version:       >= 1.16
build-type:          Simple

library
  build-depends:     base, containers, mtl, text, wl-pprint-text, uu-parsinglib,
                     void, template-haskell, array, semigroups, vector
  exposed-modules:   Eval,
                     Eval.EvalM,
                     Eval.ExtractProgram,
                     Eval.Desugar,
                     Eval.LispEqual,
                     ALaCarte,
                     ALaCarte.TH,
                     Parse,
                     Types,
                     SexpFrontend.Lexer,
                     SexpFrontend.LexTok,
                     SexpFrontend.Parser,
                     Utils
  -- other-modules:
  default-language:  Haskell2010
  ghc-options:       -W -Wall -fwarn-monomorphism-restriction -fno-warn-name-shadowing -ferror-spans -rtsopts
  build-tools:       alex, happy
  hs-source-dirs:    src

-- executable           scheme-repl
--   build-depends:     scheme
--   main-is:           Eval.hs
--   default-language:  Haskell2010
--   ghc-options:       -W -Wall -fwarn-monomorphism-restriction -ferror-spans -rtsopts
--   hs-source-dirs:    src
--  other-modules:     Utils.Utils
--  ghc-options:       -main-is MyMain
--  build-tools:       alex happy

test-suite scheme-test
  type:             exitcode-stdio-1.0
  build-depends:    base, containers, mtl, text, wl-pprint-text, uu-parsinglib,
                    void, template-haskell, array, semigroups,
                    tasty, tasty-hunit, template-haskell, vector,
                    --, hunit
                    -- test-framework,
                    -- QuickCheck, test-framework-quickcheck
                    scheme
 main-is:           Main.hs
 hs-source-dirs:    test
  -- , src, dist/build
 default-language:  Haskell2010

